<resources>
    <string name="app_name">BkMusic</string>
    <string name="appName">Bk Music</string>
    <string name="myMail">nguyentiengiang@outlook.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="actionSettings">Settings</string>
    <string name="menuHotMusic">Nhạc Hot</string>
    <string name="menuPopularAlbum">Album Phổ biến</string>
    <string name="menuMusicChart">Bảng xếp hạng</string>
    <string name="menuFavorMusic">Nhạc của tôi</string>

    <string name="scan_music">Đang tìm bài hát</string>
    <string name="player_online">Nghe nhạc trực tuyến</string>
    <string name="player_offline">Nghe nhạc</string>

    <string name="share">Chia sẻ</string>
    <string name="feedback">Gửi phản hồi</string>
    <string name="waitting_text">Xin chờ ...</string>
    <string name="done_text">Loaded</string>
    <string name="NOW_PLAYING">Now playing</string>

    <string-array name="song_spinner">
        <item>Nghe bài hát này</item>
        <item>Tải về</item>
        <item>Thêm vào playlist</item>
    </string-array>

    <string name="menu_playlist_edit_name">Đổi tên</string>
    <string name="menu_playlist_change">Sửa danh sách bài hát</string>
    <string name="menu_playlist_delete">Xóa</string>

    <string name="menu_song_add_to_playlist">Thêm vào danh sách phát</string>
    <string name="menu_song_delete_soft">Xóa khỏi thư viện</string>
    <string name="menu_song_delete_hard">Xóa khỏi thiết bị</string>
    <string name="menu_song_delete_from_nowplay">Xóa khỏi danh sách đang chạy</string>

    <string name="title_activity_player">Now Playing</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="mp.list.layoutManager.linear">LinearLayoutManager</string>
    <!-- Common -->

    <string name="mp.cancel">Cancel</string>
    <string name="mp.Confirm">Confirm</string>

    <!-- Activity/Fragment Titles -->
    <string name="mp.fragment.title.play_list">Play List</string>
    <string name="mp.fragment.title.music">Music</string>
    <string name="mp.fragment.title.local_files">Local Files</string>
    <string name="mp.fragment.title.settings">Settings</string>

    <string name="mp.activity.title.file_system">SDCard</string>

    <!-- Play Lists -->
    <string name="mp.play_list.favorite">Favorite</string>
    <string name="mp.play_list.footer.add">Add play list</string>
    <string name="mp.play_list.footer.end_summary_formatter">%d play lists in total</string>

    <string name="mp.play_list.create">Create play list</string>
    <string name="mp.play_list.created">%s created</string>
    <string name="mp.play_list.edit">Edit play list</string>
    <string name="mp.play_list.dialog.hint">Play list name</string>
    <string name="mp.play_list.dialog.add_to">Add to play list</string>

    <plurals name="mp_play_list_items_formatter">
        <item quantity="one">%d song</item>
        <item quantity="other">%d songs</item>
    </plurals>

    <!-- Play Lists - Details -->
    <string name="mp.play_list.details.empty">No music here, go add some!</string>
    <string name="mp.play_list.details.footer.end_summary_formatter">%d songs in total</string>

    <!-- Main -->
    <string-array name="mp_main_titles">
        <item>@string/mp.fragment.title.play_list</item>
        <item>@string/mp.fragment.title.music</item>
        <item>@string/mp.fragment.title.local_files</item>
        <item>@string/mp.fragment.title.settings</item>
    </string-array>

    <!-- Music -->

    <string name="mp.music.default_duration">00:00</string>

    <!-- Local Files -->
    <string name="mp.local_files.segmented.all">All</string>
    <string name="mp.local_files.segmented.folder">Folder</string>

    <string name="mp.local_files.music_list.empty">No music found on this device</string>
    <string name="mp.local_files.music_list.end_summary_formatter">%d songs in total</string>
    <string name="mp.local_files.folder_list.end_summary_formatter">%d folders in total</string>
    <string name="mp.local_files.folder_list.item_info_formatter" formatted="false">%d songs | %s</string>
    <string name="mp.local_files.folder_list.add_folder">Add Folder</string>

    <string name="mp.local_files.file_system.empty">No files under this directory</string>
    <string name="mp.local_files.file_system.menu.done">Done</string>

    <!-- Local Files - File System -->
    <plurals name="mp_folders_created_formatter">
        <item quantity="one">%d new folder created</item>
        <item quantity="other">%d new folders created</item>
    </plurals>
    <plurals name="mp_directory_items_formatter">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>

    <plurals name="mp_selected_folders_formatter">
        <item quantity="one">%d folder selected</item>
        <item quantity="other">%d folders selected</item>
    </plurals>

    <!-- Menu -->
    <string name="mp.menu.add_to_play_list">Add to play list</string>
    <string name="mp.menu.create_play_list">Create play list</string>
    <string name="mp.menu.refresh">Refresh</string>
    <string name="mp.menu.play_now">Play now</string>
    <string name="mp.menu.rename">Rename</string>
    <string name="mp.menu.delete">Delete</string>

    <string name="create_playlist_hint">Mời nhập tên playlist</string>
    <string name="create_playlist_suggest">My Playlist</string>

</resources>
